--- a/package.json
+++ b/package.json
@@ -20,9 +20,12 @@
     "@testing-library/jest-dom": "^6.5.0",
     "@testing-library/react": "^16.0.1",
     "@vitejs/plugin-react": "^1.0.0",
+    "autoprefixer": "^10.4.20",
     "babel-jest": "^27.0.6",
     "cypress": "^13.14.2",
     "jest": "^27.0.6",
+    "postcss": "^8.4.47",
+    "tailwindcss": "^3.4.12",
     "vite": "^2.4.4"
   }
 }
