--- a/package.json
+++ b/package.json
@@ -34,7 +34,9 @@
     "eslint-plugin-react-hooks": "^4.6.2",
     "jest": "^27.0.6",
     "postcss": "^8.4.47",
+    "prettier": "^3.3.3",
     "tailwindcss": "^3.4.12",
-    "vite": "^2.4.4"
+    "vite": "^2.4.4",
+    "vite-plugin-svgr": "^4.2.0"
   }
 }
