--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "@testing-library/react": "^16.0.1",
     "@vitejs/plugin-react": "^1.0.0",
     "autoprefixer": "^10.4.20",
-    "babel-jest": "^27.0.6",
+    "babel-jest": "^27.5.1",
     "cypress": "^13.14.2",
     "eslint": "^8.57.1",
     "eslint-config-airbnb": "^19.0.4",
@@ -32,9 +32,12 @@
     "eslint-plugin-jsx-a11y": "^6.10.0",
     "eslint-plugin-react": "^7.36.1",
     "eslint-plugin-react-hooks": "^4.6.2",
-    "jest": "^27.0.6",
+    "identity-obj-proxy": "^3.0.0",
+    "jest": "^27.5.1",
     "postcss": "^8.4.47",
     "prettier": "^3.3.3",
+    "redux-mock-store": "^1.5.4",
+    "redux-thunk": "^3.1.0",
     "tailwindcss": "^3.4.12",
     "vite": "^2.4.4",
     "vite-plugin-svgr": "^4.2.0"
