Change building step

--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -19,5 +19,7 @@ jobs:
         uses: w9jds/firebase-action@v1.5.0
         with:
           args: deploy --only hosting
-        env:
-          FIREBASE_TOKEN: ${{ secrets.FIREBASE_TOKEN }}
+          repoToken: ${{ secrets.GITHUB_TOKEN }}
+          firebaseServiceAccount: ${{ secrets.FIREBASE_SERVICE_ACCOUNT_VITE_WEATHER_APP_7D14E }}
+          channelId: live
+          projectId: vite-weather-app-7d14e
